syntax = "proto3";

package customTypes;
option csharp_namespace = "CareerCloud.Grpc.Protos";

message DecimalValue {


  int64 units = 1;


  int32 nanos = 2;
}